fix spacing on footer

--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,9 @@ footer {
 footer img {
   max-width: 115px;
 }
+footer .ant-col {
+  margin-top: 1rem;
+}
 @media screen and (min-width: 992px) {
   footer {
     margin-top: 3rem;
